fixed code readability based on feedback

--- a/carboncalc-ui/src/Pages/Home/Home.css
+++ b/carboncalc-ui/src/Pages/Home/Home.css
@@ -11,7 +11,7 @@
 }
 
 .home {
-    background-color: #f8fafc;
+    background-color: #F8FAFC;
 }
 
 .bg-text {
